<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/waves">

    <TextView
        android:id="@+id/IdInfo"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/information"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/idInfoGamePlay"
        android:layout_width="490dp"
        android:layout_height="239dp"
        android:layout_marginTop="108dp"
        android:text="@string/the_objective_of_the_game_is_to_find_all_the_hidden_oil_barrels_hidden_underneath_if_you_can_t_find_one_you_will_be_provided_a_hint_showing_you_if_there_are_any_hidden_barrels_laying_in_your_row_and_column_you_may_also_find_a_hint_by_pressing_on_a_found_barrel_try_and_find_using_few_hints_as_possible"
        android:textColor="#013430"
        android:textSize="22sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/IdCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_background"
        android:text="@string/credits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>