<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/waves">



    <Button
        android:id="@+id/Info"
        android:layout_width="132dp"
        android:layout_height="68dp"
        android:layout_marginTop="276dp"
        android:text="@string/help"
        android:textSize="18sp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Options"
        android:layout_width="132dp"
        android:layout_height="68dp"
        android:layout_marginTop="168dp"
        android:text="@string/settings"
        android:textSize="18sp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/PlayGame"
        android:layout_width="132dp"
        android:layout_height="68dp"
        android:layout_marginTop="70dp"
        android:text="@string/play_game"
        android:textSize="18sp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IdImageBarrel"
        android:layout_width="148dp"
        android:layout_height="192dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oil" />

</androidx.constraintlayout.widget.ConstraintLayout>