<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/waves">




    <TextView
        android:id="@+id/TitleSetting"
        android:layout_width="155dp"
        android:layout_height="72dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IdSize"
        android:layout_width="153dp"
        android:layout_height="73dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="40dp"
        android:text="@string/board_size"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleSetting" />

    <TextView
        android:id="@+id/IdMines"
        android:layout_width="153dp"
        android:layout_height="73dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        android:text="@string/oil_barrels"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdSize" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="150dp"
        android:background="#FFFFFF"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/IdChooseSize"
            android:layout_width="282dp"
            android:layout_height="54dp"
            android:textAlignment="center"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.425" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_marginStart="312dp"
        android:layout_marginTop="56dp"
        android:background="#FFFFFF"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <Spinner
            android:id="@+id/IdChooseBarrels"
            android:layout_width="278dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/IdReset"
        android:layout_width="247dp"
        android:layout_height="72dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="32dp"
        android:text="Erase times played"
        android:textSize="18sp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toEndOf="@+id/TitleSetting" />

</androidx.constraintlayout.widget.ConstraintLayout>